# skm

./: AGENTS.md  README.md  pyproject.toml  skills.example.yaml
kb/sessions/: 2026-03-09-refactor-config-structure.md  2026-03-10-extend-skm-install-direct-source.md
src/skm/: agent_specs.toml  agents.py  cli.py  clonefile.py  config.py  detect.py  git.py  linker.py  lock.py  tui.py  types.py  utils.py
src/skm/commands/: check_updates.py  install.py  list_cmd.py  remove.py  update.py
tests/: test_cli_e2e.py  test_clonefile.py  test_config.py  test_detect.py  test_git.py  test_install.py  test_install_from_source.py  test_linker.py  test_list_cmd.py  test_local_path.py  test_packaging.py  test_types.py
