[project]
name = "skm"
version = "0.1.0"
description = "Skill Manager - manage agent skills from GitHub repos"
readme = "README.md"
authors = [
    { name = "Reorx", email = "novoreorx@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.scripts]
skm = "skm.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skm"]
