[project]
name = "skm-cli"
version = "0.2.1"
description = "Skill Manager - manage agent skills from GitHub repos"
readme = "README.md"
authors = [
    { name = "Reorx", email = "novoreorx@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "ruamel.yaml>=0.18",
    "pydantic>=2.0",
]

[project.scripts]
skm = "skm.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = ["network: tests that require network access"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
